// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferralsConfirmationSelection should render component with props and loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <p
        class="el-has-grey-text el-body-text"
      >
        This app has requested to read ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
      </p>
      <div
        class="el-input-wrap-full"
      >
        <div
          class="el-mb5 el-input-group"
        >
          <input
            checked=""
            class="el-input"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-label"
            for="test-static-id"
          >
            Install for selected referrals only
          </label>
        </div>
      </div>
      <div
        class="el-input-wrap-full"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <p
      class="el-has-grey-text el-body-text"
    >
      This app has requested to read ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
    </p>
    <div
      class="el-input-wrap-full"
    >
      <div
        class="el-mb5 el-input-group"
      >
        <input
          checked=""
          class="el-input"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-label"
          for="test-static-id"
        >
          Install for selected referrals only
        </label>
      </div>
    </div>
    <div
      class="el-input-wrap-full"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ReferralsConfirmationSelection should render component with props with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <p
        class="el-has-grey-text el-body-text"
      >
        This app has requested to read ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
      </p>
      <div
        class="el-input-wrap-full"
      >
        <div
          class="el-mb5 el-input-group"
        >
          <input
            checked=""
            class="el-input"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-label"
            for="test-static-id"
          >
            Install for selected referrals only
          </label>
        </div>
      </div>
      <div
        class="el-input-wrap-full"
      >
        <div
          class="el-multi-select-input-wrapper"
        >
          <input
            class="el-multi-select-input"
            id="select-referrals-to-install"
          />
          <div
            class="el-mb7 el-multi-select-selected"
          >
            <span
              class="el-ml2 el-icon-size-medium el-icon"
            >
              <svg />
            </span>
            <p>
              Select at least one referral or un-tick the above checkbox to select all
            </p>
          </div>
          <div
            class="el-mb7 el-multi-select-un-selected"
          >
            <input
              class="el-multi-select-checkbox"
              id="test-static-id"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
            >
              JTS - Testimonial
            </label>
            <input
              class="el-multi-select-checkbox"
              id="test-static-id"
              type="checkbox"
            />
            <label
              class="el-has-grey-chips el-multi-select-label"
              for="test-static-id"
            >
              JRV - Removals
            </label>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <p
      class="el-has-grey-text el-body-text"
    >
      This app has requested to read ‘Referral’ data. Before installation please select the referral types that this app will have access to. This defaults to ‘All Referral Types’, unless selected below.
    </p>
    <div
      class="el-input-wrap-full"
    >
      <div
        class="el-mb5 el-input-group"
      >
        <input
          checked=""
          class="el-input"
          id="test-static-id"
          type="checkbox"
        />
        <label
          class="el-label"
          for="test-static-id"
        >
          Install for selected referrals only
        </label>
      </div>
    </div>
    <div
      class="el-input-wrap-full"
    >
      <div
        class="el-multi-select-input-wrapper"
      >
        <input
          class="el-multi-select-input"
          id="select-referrals-to-install"
        />
        <div
          class="el-mb7 el-multi-select-selected"
        >
          <span
            class="el-ml2 el-icon-size-medium el-icon"
          >
            <svg />
          </span>
          <p>
            Select at least one referral or un-tick the above checkbox to select all
          </p>
        </div>
        <div
          class="el-mb7 el-multi-select-un-selected"
        >
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            JTS - Testimonial
          </label>
          <input
            class="el-multi-select-checkbox"
            id="test-static-id"
            type="checkbox"
          />
          <label
            class="el-has-grey-chips el-multi-select-label"
            for="test-static-id"
          >
            JRV - Removals
          </label>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
